--- a/css/main.sass
+++ b/css/main.sass
@@ -10,22 +10,20 @@ body
   font-size: 16px
 
 .cover
+  position: relative
   background: url(../images/miami.jpg) no-repeat center center $cfa-blue
   background-size: cover
   box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2)
-  height: 80vh
+  height: 60vh
   margin-top: -20px
   text-align: center
-  &:before
-    content: ''
-    display: inline-block
-    height: 100%
-    vertical-align: middle
-    margin-right: -0.25em
 
 .cover-content
+  position: relative
+  top: 50%
   display: inline-block
   vertical-align: middle
+  transform: translateY(-50%)
   h1
     color: white
     font-size: 5em
@@ -67,3 +65,7 @@ body
   color: $cfa-pink !important
 .blue
   color: $cfa-blue !important
+
+@media screen and (min-width: 768px)
+  .cover
+    height: 80vh
